--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "build": "esbuild index.ts"
+  },
   "dependencies": {
     "esbuild": "^0.11.14",
     "typescript": "^4.2.4"
